_includes/css/agency.css
/* ... */
aside.clients {
    padding-top: 150px;
    padding-bottom: 100px;
}

aside.clients,
.bg-light-gray {
    background-color: #f7f7f7;
}

.bg-darkest-gray {
    background-color: #222;
}

.btn-primary {
    border-color: #{{ site.data.template.color.primary }};
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 700;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    border-color: #{{ site.data.template.color.primary }};
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    background-image: none;
}

.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.btn-prev {
    background: #00283c; 
    color: white; 
    letter-spacing: 1px;
}

.btn-primary .badge {
    color: #{{ site.data.template.color.primary }};
    background-color: #fff;
}

.btn-xl {
    padding: 20px 40px;
    font-size: 18px;
    font-weight: 700;
}

.btn-sm {
    padding: 10px 20px;
    font-size: 14px;
    font-weight: 700;
}

.btn-sm, .btn-xl {
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
    border-color: #{{ site.data.template.color.primary }};
    border-radius: 3px;
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
}

.btn-sm:hover,
.btn-sm:focus,
.btn-sm:active,
.btn-sm.active,
.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    border-color: #{{ site.data.template.color.primary }};
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

.btn-sm:active,
.btn-sm.active,
.open .dropdown-toggle.btn-sm,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    background-image: none;
}
.btn-sm.disabled,
.btn-sm[disabled],
fieldset[disabled] .btn-sm,
.btn-sm.disabled:hover,
.btn-sm[disabled]:hover,
fieldset[disabled] .btn-sm:hover,
.btn-sm.disabled:focus,
.btn-sm[disabled]:focus,
fieldset[disabled] .btn-sm:focus,
.btn-sm.disabled:active,
.btn-sm[disabled]:active,
fieldset[disabled] .btn-sm:active,
.btn-sm.disabled.active,
.btn-sm[disabled].active,
fieldset[disabled] .btn-sm.active,
.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.btn-sm .badge,
.btn-xl .badge {
    color: #{{ site.data.template.color.primary }};
    background-color: #fff;
}

.navbar-default {
    border-color: transparent;
    background-color: #222;
}

.navbar-default .navbar-brand {
    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
    color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #{{ site.data.template.color.secondary }};
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

@media(min-width:768px) {
    .navbar-default-color {
        padding: 25px 0;
        background-color: transparent;
    }
    .navbar-default {
        border: 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}
/* ... */

